--- a/composer.json
+++ b/composer.json
@@ -14,15 +14,15 @@
         }
     ],
     "require": {
-        "php": ">=5.5.9",
-        "illuminate/database": "^5.2||^6.0",
-        "illuminate/support": "^5.2||^6.0"
+        "php": "^7.2.5",
+        "illuminate/database": "^6.0|^7.0",
+        "illuminate/support": "^6.0|^7.0"
     },
     "autoload": {
         "psr-4": {
             "Cklmercer\\ModelSettings\\": "src/"
         }
 	},
-    
+
     "minimum-stability": "dev"
 }
